--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+certifi==2022.12.7
 charset-normalizer==3.0.1
 discord==2.1.0
 discord.py==2.1.1
@@ -10,4 +11,8 @@ idna==3.4
 multidict==6.0.4
 PyMySQL==1.0.2
 python-dotenv==0.21.1
+python-gitlab==3.13.0
+requests==2.28.2
+requests-toolbelt==0.10.1
+urllib3==1.26.14
 yarl==1.8.2
