--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+blagues-api==1.0.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 discord==2.1.0
@@ -9,10 +10,11 @@ discord.py==2.1.1
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
-PyMySQL==1.0.2
+pydantic==1.10.5
 python-dotenv==0.21.1
 python-gitlab==3.13.0
 requests==2.28.2
 requests-toolbelt==0.10.1
+typing_extensions==4.5.0
 urllib3==1.26.14
 yarl==1.8.2
