--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,18 @@ discord.py==2.1.1
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+numpy==1.24.3
+pandas==2.0.0
 pydantic==1.10.5
+PyMySQL==1.0.3
+python-dateutil==2.8.2
 python-dotenv==0.21.1
 python-gitlab==3.13.0
+pytz==2023.3
 requests==2.28.2
 requests-toolbelt==0.10.1
+six==1.16.0
 typing_extensions==4.5.0
+tzdata==2023.3
 urllib3==1.26.14
 yarl==1.8.2
