--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==4.0.2
 attrs==22.2.0
 blagues-api==1.0.1
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.0.1
 discord==2.1.0
 discord.py==2.1.1
@@ -12,8 +13,10 @@ idna==3.4
 multidict==6.0.4
 numpy==1.24.3
 pandas==2.0.0
+pycparser==2.21
 pydantic==1.10.5
 PyMySQL==1.0.3
+PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 python-gitlab==3.13.0
